# mnemo-search

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/workflow/: sync-to-public.yaml
data/: metadata_nice.json  metadata_with_id.json  model_fingerprint.json
docs/: Dockerfile  README.md  docker.md  homebrew.md  install_python.sh  mcp.md  node.md  ollama.md  setup_ollama.sh  todo.md  uv.md
src/mnemo/v1/: app.py  run.py
src/mnemo/v1/config/: config.json
src/mnemo/v1/core/: document_parser.py  embedding_and_save.py  extract_and_summarize.py  search_files.py
src/mnemo/v1/core/extract_file_text/: parse_doc_utils.py  parse_pdf.py  parse_ppt.py
src/mnemo/v1/docs/: question.md
src/mnemo/v1/scripts/: app_funcs.py
temp/: extract_file_time.py  map_reduce_summary.py  mcp_client.py  rag_vectorizer.py  sever_example.py  sparse_and_dense.py  tables.py  utils.py
