[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneno"
version = "1.0.0"
description = "mnemo is a tool for managing and searching through large collections of documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "torch==2.7.1",
 "faiss-cpu==1.9.0",
 "sentence_transformers==5.0.0",
 "streamlit==1.46.1",
 "PyMuPDF==1.26.3",
 "python-pptx==1.0.2"
]

[project.scripts]
mnemo-v1 = "mnemo.v1.run:main"